# 4Dsentinel-suite

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/docs/: auditoria-2026-07-15.md  bridges.json  convenciones.md  estado-sesion.md  filosofia.md  hooks.md  lecciones.md  propuestas-agent-improver.md  propuestas-escalado.md  pss.md  release.md  skills.md  testing.md
.claude/workflows/: agent-improver.js
.codebase-memory/: artifact.json  graph.db.zst
.github/workflows/: mutation.yml  validate.yml
docs/: 4dsentinel-memory.md  fluency-4d.md
docs/adr/: 0000-template.md  0001-mutmut-pineado-2x.md  README.md
fluency-4d/: CLAUDE.md
fluency-4d/.claude-plugin/: marketplace.json
fluency-4d/.claude/docs/: hooks.md  persistencia.md
fluency-4d/.github/workflows/: validate.yml
fluency-4d/plugins/fluency-4d/.claude-plugin/: plugin.json
fluency-4d/plugins/fluency-4d/hooks/: bridge_router.py  discernment_gate.py  doc_drift.py  hook_utils.py  plan_calibrator.py
fluency-4d/tests/hooks/: test_bridge_router.py  test_doc_drift.py  test_hook_utils_state.py  test_plan_calibrator.py
plugins/fluency-4d/: CLAUDE.md
plugins/fluency-4d/.claude-plugin/: plugin.json
plugins/fluency-4d/hooks/: adhd_injector.py  bridge_router.py  caveman_injector.py  discernment_gate.py  doc_drift.py  hook_utils.py  hooks.json  memory_checkpoint.py  plan_calibrator.py  suite_playbook.py
plugins/fluency-4d/skills/4d/: SKILL.md
plugins/fluency-4d/skills/4d-init/: SKILL.md
plugins/fluency-4d/skills/4d-quiz/: SKILL.md
plugins/fluency-4d/skills/4d-status/: SKILL.md
plugins/fluency-4d/skills/adhd/: SKILL.md
plugins/fluency-4d/skills/caveman/: SKILL.md
plugins/fluency-4d/skills/handoff/: SKILL.md
plugins/memory/: CLAUDE.md
plugins/memory/.claude-plugin/: plugin.json
plugins/memory/commands/: arquitectura.md  buscar.md  impacto.md  indexar.md  proyectos.md  rastrear.md
plugins/memory/scripts/: check_commands.py
plugins/memory/skills/suite-setup/: SKILL.md
plugins/sentinel-agents/: CLAUDE.md
plugins/sentinel-agents/.claude-plugin/: plugin.json
plugins/sentinel-agents/agents/: advisor.md  auditor-de-redaccion.md  bug-hunter.md  code-reviewer.md  compliance-auditor.md  critic.md  debugger.md  librarian.md  risk-assessor.md  security-auditor.md  validator.md
plugins/sentinel-agents/references/: agent-contract.md
plugins/sentinel-agents/references/iso-27000/: .manifest.sha256  00-INSTRUCCIONES-IA.md  INDEX.md  LICENSE  README.md
plugins/sentinel-agents/skills/sentinel-audit/: SKILL.md
scripts/: bump_common.py  bump_suite.py  bump_version.py  check_agents.py  check_ascii.py  check_bump_on_change.py  check_commit_trailer.py  check_kb_blank.py  check_manifests.py  check_suite_versions.py  check_verdict_enums.py  fluency_bump_version.py  fluency_check_skills.py  frontmatter_utils.py  memory_bump_version.py  pre-commit  sentinel_bump_version.py  sentinel_check_skills.py
sentinel-agents/: LICENSE  README.md
sentinel-agents/.claude-plugin/: marketplace.json
sentinel-agents/plugins/sentinel-agents/: CLAUDE.md
sentinel-agents/plugins/sentinel-agents/.claude-plugin/: plugin.json
sentinel-agents/plugins/sentinel-agents/agents/: auditor-de-redaccion.md  debugger.md  risk-assessor.md  validator.md
sentinel-agents/plugins/sentinel-agents/references/: agent-contract.md
sentinel-agents/scripts/: check_agents.py
sentinel-agents/tests/fixtures/target-vulnerable/: README.md  SPEC.md  migration.sql
tests/: README.md  test_check_skills.py
tests/agent-evals/: README.md  RUBRIC.md
tests/fixtures/target-vulnerable/: README.md  auth.js
tests/fluency-4d/: test_check_skills.py
tests/fluency-4d/hooks/: conftest.py  test_adhd_injector.py  test_bridge_router.py  test_bridge_security.py  test_caveman_injector.py  test_discernment_gate.py  test_doc_drift.py  test_hook_utils_hardening.py  test_hook_utils_state.py  test_hooks_quoting.py  test_memory_checkpoint.py  test_safe_doc_path_property.py  test_suite_playbook.py
tests/hooks/: conftest.py  test_bridge_router.py  test_doc_drift.py  test_memory_checkpoint.py
tests/scripts/: test_bump_suite.py  test_check_agents.py  test_check_ascii.py  test_check_bump_on_change.py  test_check_commands.py  test_check_commit_trailer.py  test_check_kb_blank.py  test_check_sentinel_skills.py  test_check_suite_versions.py  test_fluency_bump_version.py  test_frontmatter_utils.py  test_memory_bump_version.py  test_sentinel_bump_version.py
tests/sentinel-agents/: README.md
tests/workflows/: agent-improver.test.js
(+75 files in other folders)
