[project]
name = "4dsentinel-suite-dev"
version = "0.0.0"
description = "Entorno de desarrollo del monorepo 4Dsentinel-suite (tests y lint; los plugins viven en plugins/)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
# tests/sentinel-agents/ son FIXTURES (target-vulnerable con un test que falla a
# proposito para el validator), NO suite pytest: se excluyen. Sin args, pytest usa
# testpaths (~107 de fluency-4d); el CI corre `pytest tests/` explicito, que ademas
# recolecta tests/scripts/ (~25 mas) porque el arg posicional ignora testpaths.
testpaths = ["tests/fluency-4d"]
addopts = "--ignore=tests/sentinel-agents"

[tool.ruff]
line-length = 100
target-version = "py311"
# No lintear los fixtures deliberadamente vulnerables de sentinel-agents.
extend-exclude = ["tests/sentinel-agents/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
# Los hooks usan sys.path.insert + imports entre hermanos (bridge_router/hook_utils)
# que mypy no resuelve estaticamente; ignore_missing_imports evita que eso rompa strict.
ignore_missing_imports = true
explicit_package_bases = true
exclude = ["tests/sentinel-agents/fixtures"]
