[project]
name = "4dsentinel-suite-dev"
version = "0.0.0"
description = "Entorno de desarrollo del monorepo 4Dsentinel-suite (tests y lint; los plugins viven en plugins/)"
requires-python = ">=3.11"

[tool.pytest.ini_options]
# tests/sentinel-agents/ son FIXTURES (target-vulnerable con un test que falla a
# proposito para el validator), NO suite pytest: se excluyen via --ignore.
# testpaths incluye AMBAS carpetas reales para que un `pytest` pelado local corra
# tambien tests/scripts/ (los bump/check) y no de un verde falso (F10 de la auditoria).
testpaths = ["tests/fluency-4d", "tests/scripts"]
addopts = "--ignore=tests/sentinel-agents"

[tool.ruff]
line-length = 100
target-version = "py311"
# No lintear los fixtures deliberadamente vulnerables de sentinel-agents.
extend-exclude = ["tests/sentinel-agents/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
# Los hooks usan sys.path.insert + imports entre hermanos (bridge_router/hook_utils)
# que mypy no resuelve estaticamente; ignore_missing_imports evita que eso rompa strict.
ignore_missing_imports = true
explicit_package_bases = true
# scripts/ en el path para que mypy resuelva el import hermano `bump_common`
# (los wrappers de bump delegan en el; sin esto seria Any -> no-any-return).
mypy_path = ["scripts"]
exclude = ["tests/sentinel-agents/fixtures"]
